fix(ui): Closes ZKF-932 (loader on mobile fixed)

--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -44,7 +44,7 @@ footer.layout-footer {
 
     & > div {
       @media (max-width: $mobile) {
-        flex-direction: column-reverse !important;
+        flex-direction: column-reverse;
       }
     }
   }
