--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -12,9 +12,10 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: white;
+  background: $white;
   animation-fill-mode: forwards;
   transition-delay: 0.35s;
+
   &.fade-leave-active {
     transition-delay: 0.5s;
   }
@@ -24,11 +25,12 @@
     width: max-content;
     padding-top: 0 !important;
 
-    .zkwallet-logo {
+    .zkwallet-logo, .projectLogo {
       height: 55px;
 
       @media screen and (max-width: $mobile) {
         height: 35px;
+        max-width: 45vw;
       }
     }
 
